add_executable(test-001 test_001.c)
add_test(NAME test-001 COMMAND test-001)

add_executable(test-002 test_002.c)
add_test(NAME test-002 COMMAND test-002)

add_executable(test-003 test_003.c)
add_test(NAME test-003 COMMAND test-003)

add_executable(test-004 test_004.c)
add_test(NAME test-004 COMMAND test-004)

add_executable(test-005 test_005.c)
add_test(NAME test-005 COMMAND test-005)

add_executable(test-006 test_006.c)
add_test(NAME test-006 COMMAND test-006)

#add_executable(test-007 test_007.c)
#add_test(NAME test-007 COMMAND test-007)

add_executable(test-008 test_008.c)
add_test(NAME test-008 COMMAND test-008)

add_executable(test-009 test_009.c)
add_test(NAME test-009 COMMAND test-009)

