check_PROGRAMS=test-001 test-002 test-003 test-004 test-005 test-006 test-007
test_001_SOURCES=test_001.c
test_002_SOURCES=test_002.c
test_003_SOURCES=test_003.c
test_004_SOURCES=test_004.c
test_005_SOURCES=test_005.c
test_006_SOURCES=test_006.c
test_007_SOURCES=test_007.c ../src/vector.c ../src/util.c

TESTS = $(check_PROGRAMS)
