AUTOMAKE_OPTIONS=subdir-objects

check_PROGRAMS=test-001 test-002 test-003 test-004 test-005
check_PROGRAMS+=test-006 test-007 test-008 test-009 test-010
check_PROGRAMS+=test-011

test_001_SOURCES=test_001.c
test_002_SOURCES=test_002.c
test_003_SOURCES=test_003.c
test_004_SOURCES=test_004.c
test_005_SOURCES=test_005.c
test_006_SOURCES=test_006.c
test_007_SOURCES=test_007.c ../src/vector.c ../src/util.c
test_008_SOURCES=test_008.c
test_009_SOURCES=test_009.c
test_010_SOURCES=test_010.c ../src/hash.c
test_011_SOURCES=test_011.c

TESTS = $(check_PROGRAMS)
